# cf_template

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  aaa.cpp  compare.py  debug.h  go  go.py  go.sh  input.txt  main.cpp  temp.py  template.cpp  test.py
problem_A/: A.cpp
problems/: 1.cpp
templates/: bigint.cpp  bigint.h  bitset.cpp  bst_utils.h  ckminmax.h  common.h  debug.h  dijkstra.cpp  dijkstra.h  disjoint_set_union.cpp  dsu.h  fenwick.cpp  flow.cpp  flow.h  geometry.h  geometry3.h  get_primes.h  graph.cpp  graph.h  hash.cpp  heavy_light_decomposition.h  input.cpp  int128.h  kd-tree.cpp  lca.cpp  lct.h  list.h  main.cpp  math.cpp  matrix.h  mint.h  point.cpp  prefix_sum.h  range_min.h  scc.cpp  segment_tree.cpp  segment_tree.h  splay.cpp  splay.h  string.cpp  (+10 more)
templates/ds/: bst_utils.h  cartesian_tree.h  euler_tour_tree.h  fenwick.cpp  lct.h  link_cut_tree.h  persistent_array.h  segment_tree.h  splay.h  treap.h
templates/graph/: dijkstra.h  directed_mst.h  flow.h  graph.h  matching.h  tarjan.h  tarjan_directed.h  tarjan_undirected.h  temp.cpp  two-sat.h
templates/math/: basis.h  extgcd.h  gauss.h  get_primes.h  mint.h  shawk.h  smawk.h
templates/string/: ac_automaton.h  hash_string.h  kmp.h  manacher.h  suffix_array.h  trie.cpp
templates/tree/: centroid_decomposition.h  euler_tour_tree.h  heavy_light_decomposition.h  link_cut_tree.h  tdc.h
templates/utils/: array.h  delayed_sequence.h  io.h  radix_sort.h  random.h  range_min.h  setpp.h  sparse_table.h  stack_size.h
tests/: CMakeLists.txt  bst_utils_test.cpp  dijkstra_test.cpp  dsu_test.cpp  flow_test.cpp  geometry_test.cpp  get_primes_test.cpp  graph_test.cpp  mint_test.cpp  range_min_test.cpp  segment_tree_test.cpp  splay_test.cpp  tpoint_test.cpp  treap_test.cpp
tests/ds/: CMakeLists.txt  bst_utils_test.cpp  segment_tree_test.cpp  splay_test.cpp  treap_test.cpp
tests/graph/: CMakeLists.txt  dijkstra_test.cpp  flow_test.cpp  tarjan_test.cpp
tests/math/: CMakeLists.txt  gauss_test.cpp  get_primes_test.cpp  mint_test.cpp  shawk_test.cpp
tests/string/: CMakeLists.txt  hash_string_test.cpp  kmp_test.cpp  suffix_array_test.cpp
tests/tree/: CMakeLists.txt  heavy_light_decomposition_test.cpp  path_add_path_sum_test.cpp
tests/utils/: CMakeLists.txt  delayed_sequence_test.cpp  radix_sort_test.cpp  range_min_test.cpp
utils/bits/: stdc++.h
zzz/: submit_A.cpp
