cmake_minimum_required(VERSION 3.15.0)
project(XdbwkCfTemplate VERSION 0.2.0)

set(CMAKE_CXX_STANDARD 20)

include(GoogleTest)

function(add_simple_test NAME PATH)
  add_executable(${NAME} ${PATH})
  target_link_libraries(${NAME} gtest_main)
  gtest_discover_tests(${NAME})
endfunction()

add_simple_test(bst_utils_test bst_utils_test.cpp)
add_simple_test(dijkstra_test graph/dijkstra_test.cpp)
add_simple_test(flow_test graph/flow_test.cpp)
add_simple_test(geometry_test geometry_test.cpp)
add_simple_test(get_primes_test math/get_primes_test.cpp)
add_simple_test(heavy_light_decomposition_test tree/heavy_light_decomposition_test.cpp)
add_simple_test(mint_test mint_test.cpp)
add_simple_test(range_min_test range_min_test.cpp)
add_simple_test(segment_tree_test segment_tree_test.cpp)
add_simple_test(suffix_array_test string/suffix_array_test.cpp)
add_simple_test(radix_sort_test utils/radix_sort_test.cpp)
add_simple_test(tarjan_test graph/tarjan_test.cpp)
add_simple_test(tpoint_test tpoint_test.cpp)
add_simple_test(treap_test treap_test.cpp)
